frontend/src/styles/main.css
/* ... */
svg:hover polygon {
  fill: #281500;
}
.container-arrow {
  height: 30px;
  width: 100%;
}
.container-arrow svg {
  height: 30px;
  width: 100%;
}

/* Answer controls */
.box-answer-team {
  flex-grow: 1;
}
.box-answer-range {
  width: 100%;
  flex-grow: 0;
}
.box-answer-range-label {
  display: flex;
  justify-content: space-between;
}
.box-answer-range-label p {
  color: white;
  margin: 0;
}

/* Viewer layout */
.container-game {
  height: 100vh;
}
.container-categories-viewer {
  height: 16%;
}
.container-questions-viewer {
  height: calc(60% - 30px);
}
.container-question {
  height: 100%;
}
.container-question-viewer {
  height: calc(78% - 30px);
  padding-top: 17vh;
}
.container-absolute {
  position: absolute;
  top: 0;
  left: 0;
  right: 0;
  background-color: transparent !important;
}
.big-container-overlay {
  height: 100%;
}
.container-results {
  display: flex;
  height: 24%;
}
.container-team {
  flex-grow: 1;
  flex-basis: 0;
  padding-left: 5px;
  padding-right: 5px;
}

/* Grid primitives */
.row-ceopardy {
  display: flex;
}
.col-ceopardy {
  flex-basis: 0;
  flex-grow: 1;
  max-width: 100%;
}
.row-player {
  display: flex;
  flex-wrap: wrap;
}
.col-player {
  flex-basis: 0;
  flex-grow: 1;
  height: 100%;
}

/* Question + category boxes */
.box-selected > .box-question-right {
  background-color: #0001df !important;
}
.box-answered > .box-question-right {
  background-color: #000181;
}
.box-ceopardy {
  background-color: #0001a1;
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 0.25rem;
}
.box-ceopardy-colorless {
  width: 100%;
  height: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  border-radius: 0.25rem;
}
.box-ceopardy p,
.box-ceopardy-colorless p {
  display: table-cell;
  vertical-align: middle;
  text-align: center;
  margin: auto;
}
.box-category-viewer p {
  color: #ffffff;
  text-shadow: 2px 2px 0px #000000;
  font-size: calc(2vh + 1.5vw);
  line-height: 90%;
}
.box-question-viewer {
  cursor: pointer;
  overflow: hidden;
}
.box-category-host p {
  color: #ffffff;
  text-shadow: 2px 2px 0px #000000;
  font-size: calc(1.2vh + 0.8vw);
  line-height: 90%;
}
.box-question-host {
  cursor: pointer;
  overflow: hidden;
}
.box-question-left {
  display: flex;
  flex-direction: column;
  background-color: #000181;
  width: 30%;
  height: 100%;
  overflow: hidden;
}
.box-question-right {
  display: flex;
  flex-direction: column;
  background-color: #0001a1;
  width: 70%;
  height: 100%;
  overflow: hidden;
}
.box-question-status {
  color: #ffffff;
  flex-grow: 1;
  display: flex;
  width: 100%;
}
.box-question-status span {
  margin: auto;
  text-align: center;
  font-size: calc(1vh + 0.5vw);
  width: 100%;
}
.box-question-host p {
  color: #d9a24f;
  text-shadow: 2px 2px 0px #000000;
  font-size: calc(1.5vh + 2vw);
  line-height: 90%;
  margin: 0;
}
.box-question-viewer p {
  color: #d9a24f;
  text-shadow: 2px 2px 0px #000000;
  font-size: calc(3vh + 2vw);
  line-height: 90%;
  margin: 0;
}
.box-question-viewer p.answered {
  display: none;
}

.box-overlay {
  padding: calc(0.3vh + 0.3vw);
  height: 100%;
}
.box-fake-overlay {
  padding: calc(0.2vh + 0.1vw);
  height: 100%;
}
.box-team p {
  color: #ffffff;
  font-size: calc(1.5vh + 1vw);
  line-height: 90%;
}
.box-team-host p {
  color: #ffffff;
  font-size: calc(1vh + 0.5vw);
  line-height: 90%;
  margin: 0;
}

/* Team-themed fonts */
.team1-font {
  font-family: 'Merienda One', Helvetica, sans-serif;
}
.team2-font {
  font-family: 'Berkshire Swash', Helvetica, sans-serif;
}
.team3-font {
  font-family: 'Pacifico', Helvetica, sans-serif;
}
.team4-font {
  font-family: 'Dancing', Helvetica, sans-serif;
}
.team5-font {
  font-family: 'Variane', Helvetica, sans-serif;
}

.box-score p {
  color: #ffffff;
  text-shadow: 2px 2px 0px #000000;
  font-size: 2.5vw;
  line-height: 90%;
  margin: 0;
}
.team-selected {
  background-color: #ffffff !important;
}

/* Layout helpers */
.black-box {
  background-color: #000000;
  border-radius: 0.5rem;
  height: 100%;
}
.flex-pad {
  padding: calc(0.3vh + 0.3vw);
}
.flex-small-pad {
  padding: calc(0.2vh + 0.1vw);
}
.flex-horizontal-pad {
  padding-left: calc(0.3vh + 0.3vw);
  padding-right: calc(0.3vh + 0.3vw);
}
.flex-vertical-pad {
  padding-top: calc(0.3vh + 0.3vw);
  padding-bottom: calc(0.3vh + 0.3vw);
}
.flex-horizontal-small-pad {
  padding-left: calc(0.2vh + 0.1vw);
  padding-right: calc(0.2vh + 0.1vw);
}
.flex-vertical-small-pad {
  padding-top: calc(0.2vh + 0.1vw);
  padding-bottom: calc(0.2vh + 0.1vw);
}
.flex-border-header {
  border-top-width: 0;
  border-left-width: 10px;
  border-right-width: 10px;
  border-bottom-width: 10px;
  border-style: solid;
}
.flex-border-footer {
  border-top-width: 10px;
  border-left-width: 10px;
  border-right-width: 10px;
  border-bottom-width: 0;
  border-style: solid;
}

.no-display {
  display: none !important;
}

/* Overlays fade */
.fade-enter-active,
.fade-leave-active {
  transition: opacity 0.8s ease;
}
.fade-enter-from,
.fade-leave-to {
  opacity: 0;
}

/* Daily Double flip animation */
.dailydouble-overlay {
  position: fixed;
  inset: 0;
  display: flex;
  align-items: center;
  justify-content: center;
  z-index: 5000;
  pointer-events: none;
  perspective: 1200px;
}
.dailydouble-inner {
  background: rgb(0, 1, 161);
  color: white;
  width: 60vw;
  height: 40vh;
  border: 1px solid black;
  display: flex;
  flex-direction: column;
  align-items: center;
  justify-content: center;
  font-weight: bolder;
  font-family: 'Gyparody', Helvetica, sans-serif;
  font-size: calc(6vh + 2vw);
  text-shadow: 2px 2px 0px #000000;
  transform: scale(0.1) rotateX(0deg);
  animation: dailydouble-spin 2s ease-out forwards;
}
@keyframes dailydouble-spin {
  0% {
    transform: scale(0.05) rotateX(0deg);
  }
  100% {
    transform: scale(1) rotateX(720deg);
  }
}
/* ... */

